[[bin]]
name = "polkadot"
path = "src/main.rs"

[package]
name = "polkadot"
description = "Implementation of a https://polkadot.network node in Rust based on the Substrate framework."
license = "GPL-3.0-only"
version = "0.8.30"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
readme = "README.md"

[dependencies]
cli = { package = "polkadot-cli", path = "cli" }
color-eyre = "0.5.10"
thiserror = "1.0.23"
futures = "0.3.12"
service = { package = "polkadot-service", path = "node/service" }
parity-util-mem = { version = "*", default-features = false, features = ["jemalloc-global"] }

[dev-dependencies]
assert_cmd = "1.0.2"
nix = "0.19.1"
tempfile = "3.2.0"

[workspace]
members = [
	"bridges/primitives/kusama",
	"bridges/primitives/polkadot",
	"bridges/primitives/runtime",
	"cli",
	"core-primitives",
	"erasure-coding",
	"primitives",
	"runtime/common",
	"runtime/common/slot_range_helper",
	"runtime/parachains",
	"runtime/polkadot",
	"runtime/kusama",
	"runtime/rococo",
	"runtime/westend",
	"runtime/test-runtime",
	"statement-table",
	"xcm",
	"xcm/xcm-builder",
	"xcm/xcm-executor",
	"node/collation-generation",
	"node/core/approval-voting",
	"node/core/av-store",
	"node/core/backing",
	"node/core/bitfield-signing",
	"node/core/candidate-selection",
	"node/core/candidate-validation",
	"node/core/chain-api",
	"node/core/proposer",
	"node/core/provisioner",
	"node/core/runtime-api",
	"node/network/approval-distribution",
	"node/network/bridge",
	"node/network/protocol",
	"node/network/statement-distribution",
	"node/network/bitfield-distribution",
	"node/network/availability-distribution",
	"node/network/availability-recovery",
	"node/network/collator-protocol",
	"node/network/gossip-support",
	"node/overseer",
	"node/primitives",
	"node/service",
	"node/subsystem",
	"node/subsystem/dispatch-gen",
	"node/subsystem-test-helpers",
	"node/subsystem-util",
	"node/jaeger",
	"node/metered-channel",
	"node/test/client",
	"node/test/service",
	"parachain/test-parachains",
	"parachain/test-parachains/adder",
	"parachain/test-parachains/adder/collator",
]

[badges]
maintenance = { status = "actively-developed" }

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"

[features]
runtime-benchmarks=["cli/runtime-benchmarks"]
real-overseer=["cli/real-overseer"]
try-runtime = ["cli/try-runtime"]
[patch."https://github.com/paritytech/substrate"]
node-template ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/bin/node-template/node" }
frame-benchmarking ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/benchmarking" }
frame-support ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/support" }
frame-metadata ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/metadata" }
sp-core ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/core" }
sp-debug-derive ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/debug-derive" }
sp-externalities ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/externalities" }
sp-std ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/std" }
sp-storage ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/storage" }
sp-runtime-interface ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/runtime-interface" }
sp-runtime-interface-proc-macro ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/runtime-interface/proc-macro" }
sp-tracing ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/tracing" }
sp-wasm-interface ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/wasm-interface" }
sp-io ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/io" }
sp-keystore ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/keystore" }
sp-state-machine ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/state-machine" }
sp-panic-handler ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/panic-handler" }
sp-trie ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/trie" }
sp-runtime ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/runtime" }
sp-application-crypto ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/application-crypto" }
sp-arithmetic ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/arithmetic" }
sp-api ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/api" }
sp-api-proc-macro ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/api/proc-macro" }
sp-version ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/version" }
sp-test-primitives ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/test-primitives" }
substrate-test-runtime-client ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/test-utils/runtime/client" }
sc-block-builder ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/block-builder" }
sc-client-api ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/api" }
substrate-prometheus-endpoint ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/utils/prometheus" }
sc-executor ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/executor" }
sc-executor-common ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/executor/common" }
sp-allocator ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/allocator" }
sp-serializer ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/serializer" }
sc-executor-wasmi ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/executor/wasmi" }
sc-executor-wasmtime ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/executor/wasmtime" }
sp-tasks ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/tasks" }
sc-runtime-test ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/executor/runtime-test" }
sp-sandbox ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/sandbox" }
substrate-wasm-builder ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/utils/wasm-builder" }
sc-tracing ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/tracing" }
sc-telemetry ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/telemetry" }
sc-tracing-proc-macro ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/tracing/proc-macro" }
sp-block-builder ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/block-builder" }
sp-inherents ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/inherents" }
sp-blockchain ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/blockchain" }
sp-consensus ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/consensus/common" }
sp-utils ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/utils" }
sp-database ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/database" }
sp-rpc ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/rpc" }
substrate-test-runtime ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/test-utils/runtime" }
frame-system ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/system" }
frame-system-rpc-runtime-api ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/system/rpc/runtime-api" }
pallet-babe ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/babe" }
pallet-authorship ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/authorship" }
sp-authorship ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/authorship" }
pallet-session ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/session" }
pallet-timestamp ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/timestamp" }
sp-timestamp ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/timestamp" }
sp-session ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/session" }
sp-staking ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/staking" }
sp-consensus-babe ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/consensus/babe" }
sp-consensus-slots ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/consensus/slots" }
sp-consensus-vrf ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/consensus/vrf" }
frame-election-provider-support ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/election-provider-support" }
sp-npos-elections ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/npos-elections" }
sp-npos-elections-compact ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/npos-elections/compact" }
substrate-test-utils ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/test-utils" }
substrate-test-utils-derive ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/test-utils/derive" }
sc-service ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/service" }
sc-chain-spec ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/chain-spec" }
sc-chain-spec-derive ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/chain-spec/derive" }
sc-consensus-babe ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/consensus/babe" }
fork-tree ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/utils/fork-tree" }
sc-consensus-epochs ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/consensus/epochs" }
sc-consensus ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/consensus/common" }
sc-consensus-slots ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/consensus/slots" }
sc-consensus-uncles ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/consensus/uncles" }
sc-keystore ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/keystore" }
sc-network ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/network" }
sc-peerset ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/peerset" }
sp-keyring ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/keyring" }
sc-network-test ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/network/test" }
sc-finality-grandpa ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/finality-grandpa" }
sc-network-gossip ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/network-gossip" }
sp-finality-grandpa ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/finality-grandpa" }
sp-chain-spec ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/chain-spec" }
sc-client-db ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/db" }
sc-state-db ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/state-db" }
sc-informant ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/informant" }
sp-transaction-pool ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/transaction-pool" }
sc-light ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/light" }
sc-offchain ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/offchain" }
sp-offchain ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/offchain" }
sc-transaction-pool ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/transaction-pool" }
sc-transaction-graph ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/transaction-pool/graph" }
substrate-test-runtime-transaction-pool ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/test-utils/runtime/transaction-pool" }
sc-rpc ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/rpc" }
sc-rpc-api ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/rpc-api" }
sc-cli ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/cli" }
sc-rpc-server ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/rpc-servers" }
pallet-balances ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/balances" }
pallet-transaction-payment ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/transaction-payment" }
pallet-offences ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/offences" }
pallet-staking ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/staking" }
pallet-staking-reward-curve ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/staking/reward-curve" }
sp-consensus-aura ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/consensus/aura" }
substrate-test-client ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/test-utils/client" }
sp-runtime-interface-test-wasm ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/runtime-interface/test-wasm" }
frame-support-procedural ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/support/procedural" }
frame-support-procedural-tools ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/support/procedural/tools" }
frame-support-procedural-tools-derive ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/support/procedural/tools/derive" }
frame-benchmarking-cli ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/utils/frame/benchmarking-cli" }
node-template-runtime ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/bin/node-template/runtime" }
frame-executive ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/executive" }
pallet-indices ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/indices" }
frame-system-benchmarking ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/system/benchmarking" }
pallet-aura ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/aura" }
pallet-grandpa ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/grandpa" }
pallet-randomness-collective-flip ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/randomness-collective-flip" }
pallet-sudo ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/sudo" }
pallet-template ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/bin/node-template/pallets/template" }
pallet-transaction-payment-rpc-runtime-api ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/transaction-payment/rpc/runtime-api" }
pallet-transaction-payment-rpc ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/transaction-payment/rpc" }
sc-basic-authorship ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/basic-authorship" }
sc-proposer-metrics ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/proposer-metrics" }
sc-consensus-aura ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/consensus/aura" }
substrate-frame-rpc-system ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/utils/frame/rpc/system" }
substrate-build-script-utils ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/utils/build-script-utils" }
node-bench ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/bin/node/bench" }
node-primitives ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/bin/node/primitives" }
node-runtime ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/bin/node/runtime" }
frame-try-runtime ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/try-runtime" }
pallet-assets ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/assets" }
pallet-authority-discovery ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/authority-discovery" }
sp-authority-discovery ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/authority-discovery" }
pallet-bounties ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/bounties" }
pallet-treasury ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/treasury" }
pallet-collective ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/collective" }
pallet-contracts ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/contracts" }
pallet-contracts-primitives ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/contracts/common" }
pallet-contracts-proc-macro ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/contracts/proc-macro" }
pallet-contracts-rpc-runtime-api ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/contracts/rpc/runtime-api" }
pallet-democracy ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/democracy" }
pallet-scheduler ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/scheduler" }
pallet-election-provider-multi-phase ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/election-provider-multi-phase" }
pallet-elections-phragmen ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/elections-phragmen" }
pallet-gilt ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/gilt" }
pallet-identity ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/identity" }
pallet-im-online ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/im-online" }
pallet-lottery ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/lottery" }
frame-support-test ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/support/test" }
pallet-membership ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/membership" }
pallet-mmr ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/merkle-mountain-range" }
pallet-mmr-primitives ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/merkle-mountain-range/primitives" }
pallet-multisig ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/multisig" }
pallet-offences-benchmarking ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/offences/benchmarking" }
pallet-proxy ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/proxy" }
pallet-utility ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/utility" }
pallet-recovery ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/recovery" }
pallet-session-benchmarking ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/session/benchmarking" }
pallet-society ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/society" }
pallet-tips ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/tips" }
pallet-vesting ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/vesting" }
node-testing ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/bin/node/testing" }
node-executor ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/bin/node/executor" }
node-browser-testing ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/bin/node/browser-testing" }
node-cli ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/bin/node/cli" }
substrate-browser-utils ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/utils/browser" }
node-inspect ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/bin/node/inspect" }
node-rpc ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/bin/node/rpc" }
pallet-contracts-rpc ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/contracts/rpc" }
pallet-mmr-rpc ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/merkle-mountain-range/rpc" }
sc-consensus-babe-rpc ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/consensus/babe/rpc" }
sc-finality-grandpa-rpc ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/finality-grandpa/rpc" }
sc-sync-state-rpc ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/sync-state-rpc" }
sc-authority-discovery ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/authority-discovery" }
sc-finality-grandpa-warp-sync ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/finality-grandpa-warp-sync" }
try-runtime-cli ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/utils/frame/try-runtime/cli" }
remote-externalities ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/utils/frame/remote-externalities" }
sc-service-test ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/service/test" }
substrate-frame-cli ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/utils/frame/frame-utilities-cli" }
test-runner-example ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/bin/node/test-runner-example" }
sc-consensus-manual-seal ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/consensus/manual-seal" }
test-runner ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/test-utils/test-runner" }
node-rpc-client ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/bin/node/rpc-client" }
chain-spec-builder ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/bin/utils/chain-spec-builder" }
subkey ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/bin/utils/subkey" }
sc-consensus-pow ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/client/consensus/pow" }
sp-consensus-pow ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/consensus/pow" }
pallet-atomic-swap ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/atomic-swap" }
pallet-elections ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/elections" }
pallet-example ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/example" }
pallet-example-offchain-worker ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/example-offchain-worker" }
pallet-example-parallel ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/example-parallel" }
pallet-nicks ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/nicks" }
pallet-node-authorization ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/node-authorization" }
pallet-scored-pool ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/scored-pool" }
pallet-staking-reward-fn ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/frame/staking/reward-fn" }
sp-api-test ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/api/test" }
sp-application-crypto-test ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/application-crypto/test" }
sp-arithmetic-fuzzer ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/arithmetic/fuzzer" }
sp-npos-elections-fuzzer ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/npos-elections/fuzzer" }
sp-runtime-interface-test ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/runtime-interface/test" }
sp-runtime-interface-test-wasm-deprecated ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/primitives/runtime-interface/test-wasm-deprecated" }
substrate-test-utils-test-crate ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/test-utils/test-crate" }
substrate-frame-rpc-support ={path = "/Users/zeke/Documents/parity/trace-dupes/substrate/utils/frame/rpc/support" }

# Configuration for building a .deb package - for use with `cargo-deb`
[package.metadata.deb]
name = "polkadot"
extended-description = "Implementation of a https://polkadot.network node in Rust based on the Substrate framework."
section = "misc"
maintainer = "martin@parity.io"
license-file = ["LICENSE", "0"]
# https://www.debian.org/doc/debian-policy/ch-maintainerscripts.html
maintainer-scripts = "scripts/packaging/deb-maintainer-scripts"
assets = [
	["target/release/polkadot", "/usr/bin/", "755"],
	["scripts/packaging/polkadot.service", "/lib/systemd/system/", "644"]
]
conf-files = [
	"/etc/default/polkadot"
]

# Configuration for building an .rpm package - for use with `cargo-rpm`
[package.metadata.rpm]
package = "polkadot"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
polkadot = { path = "/usr/bin/polkadot" }

[package.metadata.rpm.files]
"../scripts/packaging/polkadot.service" = { path = "/usr/lib/systemd/system/polkadot.service", mode = "644" }
