[package]
name = "polkadot-rpc"
version = "0.8.30"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "15.1.0"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
parity-scale-codec = { version = "2.0.0", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
beefy-gadget = { git = "https://github.com/paritytech/grandpa-bridge-gadget", branch = "master" }
beefy-gadget-rpc = { git = "https://github.com/paritytech/grandpa-bridge-gadget", branch = "master" }
